--- a/src/style.css
+++ b/src/style.css
@@ -17,11 +17,14 @@ body{
 .title{
     border: 1px solid;
     grid-row: 1/2;
-    grid-column: 1/3;
+    grid-column: 1/2;
     font-size: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+.winner{
+    border: 1px solid;
+    grid-row: 1/2;
+    grid-column: 2/3;
 }
 
 .player-container{
@@ -54,8 +57,10 @@ body{
 
 .player-board > *{
     border: 1px solid;
+    font-size: 40px;
 }
 
 .computer-board > *{
     border: 1px solid;
+    font-size: 40px;
 }
