--- a/src/style.css
+++ b/src/style.css
@@ -1,58 +1,80 @@
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     margin: 0;
-}
-
-.container{
-    width: 1600px;
-    height: 800px;
     display: grid;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 0.1fr 5fr;
     grid-template-columns: 1fr 1fr;
+    background-image: url(../pirats.jpg)
 }
 
 .title{
-    border: 1px solid;
     grid-row: 1/2;
     grid-column: 1/2;
     font-size: 80px;
+    font-weight: bold;
+    margin-left: 30px;
 }
 
 .winner{
-    border: 1px solid;
     grid-row: 1/2;
     grid-column: 2/3;
+    font-size: 60px;
+    font-weight: bold;
+    color: red;
+    margin-top: 40px;
+    text-shadow: 2px 2px white;
+}
+
+.player{
+    grid-row: 2/3;
+    grid-column: 1/2;
+    margin-left: 330px;
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+}
+
+.computer{
+    grid-row: 2/3;
+    grid-column: 2/3;
+    margin-left: 130px;
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
 }
 
 .player-container{
-    border: 1px solid;
-    grid-row: 2/3;
+    grid-row: 3/4;
     grid-column: 1/2;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .computer-container{
-    border: 1px solid;
-    grid-row: 2/3;
+    grid-row: 3/4;
     grid-column: 2/3;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .player-board,
 .computer-board{
+    margin-top: 40px;
     height: 500px;
     width: 500px;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
     border: 1px solid;
+    background-color: lightgray;
+}
+
+.player-board{
+    margin-left: 200px;
+}
+
+.computer-board{
+    margin-right: 200px;
 }
 
 .player-board > *{
@@ -63,4 +85,9 @@ body{
 .computer-board > *{
     border: 1px solid;
     font-size: 40px;
+}
+
+.pcell,
+.ccell{
+    border: 1px solid white;
 }
